Notebooks added. Code without cleaning.

--- a/notebooks/01_classification.ipynb
+++ b/notebooks/01_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type\n",
+      "Basilar-type aura                 18\n",
+      "Familial hemiplegic migraine      24\n",
+      "Migraine without aura             60\n",
+      "Other                             17\n",
+      "Sporadic hemiplegic migraine      14\n",
+      "Typical aura with migraine       247\n",
+      "Typical aura without migraine     20\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.groupby('Type').size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +69,7 @@
        "(7,)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,15 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Precision:\t  0.778125\n",
-      "KNN Accuracy:\t  0.75\n"
+      "KNN Precision:\t  0.75\n",
+      "KNN Accuracy:\t  0.6875\n"
      ]
     }
    ],
@@ -95,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
