Few fixes in notebooks.

--- a/notebooks/01_classification.ipynb
+++ b/notebooks/01_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "X = df.iloc[:, :-1]\n",
     "y = df['Type']\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +74,7 @@
        "(7,)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Precision:\t  0.75\n",
-      "KNN Accuracy:\t  0.6875\n"
+      "KNN Precision:\t  0.871875\n",
+      "KNN Accuracy:\t  0.75\n"
      ]
     }
    ],
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +138,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m X[\u001b[39m'\u001b[39m\u001b[39mpredicted\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m predictions\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
     "X['predicted'] = predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
