--- a/notebooks/03_selection.ipynb
+++ b/notebooks/03_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,22 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "#X = df.iloc[:, :-1]\n",
-    "#y = df.iloc[:, -1:]\n",
+    "y = df.iloc[:, -1:]\n",
     "\n",
-    "#scaler = MinMaxScaler()\n",
-    "#X = scaler.fit_transform(X)"
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,17 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Age', 'Visual', 'Vertigo', 'Hypoacusis', 'Visual_defect'],\n",
-       "      dtype=object)"
+       "array(['x12', 'x14', 'x15', 'x16', 'x18'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,19 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.7074999999999999\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.695\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.665\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8925000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.7875\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.7275\n"
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.7625\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.5625\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.635\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8425\n"
      ]
     }
    ],
