--- a/notebooks/04_decomposition.ipynb
+++ b/notebooks/04_decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,22 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "#X = df.iloc[:, :-1]\n",
     "y = df.iloc[:, -1:]\n",
     "\n",
-    "#scaler = MinMaxScaler()\n",
-    "#X = scaler.fit_transform(X)"
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,18 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Age', 'Frequency', 'Intensity', 'Visual', 'Dysphasia', 'Vertigo',\n",
-       "       'Tinnitus', 'Hypoacusis', 'Visual_defect', 'Paresthesia'],\n",
-       "      dtype=object)"
+       "array(['x10', 'x12', 'x14', 'x15', 'x16', 'x17', 'x18', 'x19', 'x20',\n",
+       "       'x21'], dtype=object)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,19 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.7125000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.705\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.8300000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8925000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.85\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8875\n"
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.8024999999999999\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.7825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.865\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.8\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8825\n"
      ]
     }
    ],
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.95935912 0.01891688 0.00769649 0.00384417]\n"
+      "[0.20759099 0.17600177 0.12158708 0.1023161 ]\n"
      ]
     }
    ],
@@ -212,21 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.7125000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.705\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.8300000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody PCA:\t\t0.64\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8925000000000001\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.85\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8875\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody PCA:\t\t0.7825\n"
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.8024999999999999\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.7825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.865\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody PCA:\t\t0.7\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.8\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8825\n",
+      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody PCA:\t\t0.735\n"
      ]
     }
    ],
