--- a/thesis/01_titlepage.tex
+++ b/thesis/01_titlepage.tex
@@ -1,6 +1,6 @@
 
 \pretitle{Praca końcowa}
-\title{Klasyfikacja bólów głowy z wykorzystaniem algorytmów uczenia maszynoweg}
+\title{Klasyfikacja bólów głowy z wykorzystaniem algorytmów uczenia maszynowego}
 \svnurl{https://github.com/kplawik/HeadacheClassification}
 \author{Konrad Pławik}
 \department{Wydział Fizyki Technicznej, Informatyki \par i Matematyki Stosowanej}
