--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -7,9 +7,11 @@
 \include{01_titlepage}
 \newpage
 \tableofcontents
+\listoffigures
 \newpage
 
-\begin{thebibliography}{10}
-\end{thebibliography}
-\listoffigures
+\include{02_introduction}
+\include{03_data}
+\include{bibliography}
+
 \end{document}
