Latest changes in notebooks.

--- a/notebooks/01_classification.ipynb
+++ b/notebooks/01_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400, 24)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +94,7 @@
        "(7,)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Precision:\t  0.871875\n",
-      "KNN Accuracy:\t  0.75\n"
+      "KNN Precision:\t  0.88125\n",
+      "KNN Accuracy:\t  0.7125\n"
      ]
     }
    ],
@@ -117,6 +137,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               precision    recall  f1-score   support\n",
+      "\n",
+      "            Basilar-type aura       0.00      0.00      0.00         3\n",
+      " Familial hemiplegic migraine       1.00      0.12      0.22         8\n",
+      "        Migraine without aura       0.79      0.92      0.85        12\n",
+      "                        Other       1.00      0.40      0.57         5\n",
+      " Sporadic hemiplegic migraine       0.00      0.00      0.00         4\n",
+      "   Typical aura with migraine       0.68      0.98      0.80        42\n",
+      "Typical aura without migraine       1.00      0.33      0.50         6\n",
+      "\n",
+      "                     accuracy                           0.71        80\n",
+      "                    macro avg       0.64      0.39      0.42        80\n",
+      "                 weighted avg       0.71      0.71      0.64        80\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_true = y_test, y_pred = y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +214,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m X[\u001b[39m'\u001b[39m\u001b[39mpredicted\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m predictions\n",
+      "\u001b[1;32m/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kp/Documents/_data_science/06-thesis/notebooks/01_classification.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m X[\u001b[39m'\u001b[39m\u001b[39mpredicted\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m predictions\n",
       "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
      ]
     }
@@ -166,9 +232,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "współczynnik zarysu:\t\t 0.39094882430559585\n",
-      "indeks Calińskiego-Harabasza:\t 849.0836865530459\n",
-      "indeks Daviesa-Bouldina:\t 0.8754511225973681\n"
+      "współczynnik zarysu:\t\t 0.2924891869859054\n",
+      "indeks Calińskiego-Harabasza:\t 60.91296445952703\n",
+      "indeks Daviesa-Bouldina:\t 1.6038039550605447\n"
      ]
     }
    ],
