Data part begun.

--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -1,5 +1,9 @@
 \begin{thebibliography}{10}
     \bibitem{trudnosc} \url{https://www.researchgate.net/publication/291331282_The_International_Classification_of_Headache_Disorders_3rd_edition_beta_version}
-    \bibitem{ehf} \url{https://www.ehf-headache.com/contact}
+    \bibitem{ehf} \url{https://www.ehf-headache.com/}
     \bibitem{kilka} \url{https://link.springer.com/article/10.1186/s10194-018-0909-4}
+    \bibitem{dane} \url{https://codeocean.com/capsule/1269964/tree/v1}
+    \bibitem{python} \url{https://docs.python.org/3/license.html}
+    \bibitem{pandas} \url{https://github.com/pandas-dev/pandas/blob/main/LICENSE}
+    \bibitem{numpy} \url{https://github.com/numpy/numpy/blob/main/LICENSE.txt}
 \end{thebibliography}
