Classification chapter started.

--- a/thesis/03_data.tex
+++ b/thesis/03_data.tex
@@ -33,12 +33,23 @@ Zbiór nie był zbiorem zbalansowanym (co należy mieć na uwadzę w dajszej ana
 \noindent
 Zbiór nie posiadał brakujących danych więc nie zaistniała konieczność imputacji.
 
-\subsection{informacje prawne}
+\subsection{Informacje prawne}
 \noindent
 Zbiór udostępniony został na licencji GNU General Public License (GPL) \cite{dane}.\\
 
 \noindent
 Wykorzystane oprogramowanie korzystało z licenji:\\
-\indent Jezyk Python: Python Software Foundation License \cite{python}\\
-\indent Biblioteka pandas: BSD 3-Clause License \cite{pandas}\\
-\indent Biblioteka NumPY: BSD 3-Clause License \cite{numpy}\\
+\indent Język Python: Python Software Foundation License \cite{python}\\
+\indent Biblioteka Pandas: BSD 3-Clause License \cite{pandas}\\
+\indent Biblioteka NumPy: BSD 3-Clause License \cite{numpy}\\
+\indent Biblioteka Seaborn: BSD 3-Clause License \cite{seaborn}\\
+\indent Biblioteka TensorFlow: Apache License 2.0 \cite{tensorflow}\\
+
+\noindent
+Wspomniane biblioteki zostały szczegołowo opisane w następujących publikacjach naukowych:\\
+\indent Język Python \cite{python_paper}\\
+\indent Pandas: \url{https://zenodo.org/records/10957263} \cite{pandas_paper}\\
+\indent NumPy: \url{https://www.nature.com/articles/s41586-020-2649-2} \cite{numpy_paper}\\
+\indent Seaborn: \url{https://joss.theoj.org/papers/10.21105/joss.03021} \cite{seaborn_paper}\\
+\indent TensorFlow: \url{https://zenodo.org/records/10798587} \cite{tensorflow_paper}\\
+
