--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -6,4 +6,13 @@
     \bibitem{python} \url{https://docs.python.org/3/license.html}
     \bibitem{pandas} \url{https://github.com/pandas-dev/pandas/blob/main/LICENSE}
     \bibitem{numpy} \url{https://github.com/numpy/numpy/blob/main/LICENSE.txt}
+    \bibitem{seaborn} \url{https://github.com/mwaskom/seaborn/blob/master/LICENSE.md}
+    \bibitem{tensorflow} \url{https://github.com/tensorflow/tensorflow/blob/master/LICENSE}
+    \bibitem{python_paper} Van Rossum, Guido and Drake, Fred L.\\
+    "Python 3 Reference Manual", 2009\\
+    ISNB 1441412697
+    \bibitem{pandas_paper} \url{https://zenodo.org/records/10957263}
+    \bibitem{numpy_paper} \url{https://doi.org/10.1038/s41586-020-2649-2}
+    \bibitem{seaborn_paper} \url{https://joss.theoj.org/papers/10.21105/joss.03021}
+    \bibitem{tensorflow_paper} \url{https://zenodo.org/records/10798587}
 \end{thebibliography}
