--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -2,6 +2,10 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 \usepackage{color}
+\usepackage{hyperref}
+
+\usepackage{amsmath}
+\usepackage{amssymb}
 
 \begin{document}
 \include{01_titlepage}
@@ -12,6 +16,7 @@
 
 \include{02_introduction}
 \include{03_data}
-\include{bibliography}
+\include{04_classification}
 
+\include{bibliography}
 \end{document}
