Ostatnie zmiany z czesci teoretycznej.

--- a/thesis/03_data.tex
+++ b/thesis/03_data.tex
@@ -16,7 +16,7 @@ Zbiór zawierał anonimowe dane 400 rozpoznanych przypadków a każdy z przypadk
 
 \noindent
 W zbiorze znajdowały się dane dotyczące 7 rodzajów bólu głowy.
-Zbiór nie był zbiorem zbalansowanym (co należy mieć na uwadzę w dajszej analizie):
+Zbiór nie był zbiorem zbalansowanym (co należy mieć na uwadze w dalszej analizie):
 
 \begin{verbatim}
     Type
@@ -38,7 +38,7 @@ Zbiór nie posiadał brakujących danych więc nie zaistniała konieczność imp
 Zbiór udostępniony został na licencji GNU General Public License (GPL) \cite{dane}.\\
 
 \noindent
-Wykorzystane oprogramowanie korzystało z licenji:\\
+Wykorzystane oprogramowanie korzystało z licencji:\\
 \indent Język Python: Python Software Foundation License \cite{python}\\
 \indent Biblioteka Pandas: BSD 3-Clause License \cite{pandas}\\
 \indent Biblioteka NumPy: BSD 3-Clause License \cite{numpy}\\
