--- a/notebooks/04_decomposition.ipynb
+++ b/notebooks/04_decomposition.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wyświetlenie tzw heatmapy czy macierzy przedstawiającej stopień korelacji pomiędzy cechami."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -45,12 +52,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jak widać z powyzszego wykresu Ataxia nie wystąpiła ani razu w całym zbiorze. Mozemy ją więc usunąć."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = X.drop(columns=\"Ataxia\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...oraz ponownie wyświetlić heatmapę korelacji."
    ]
   },
   {
@@ -75,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalizacja przy pomocy MinMaxScalera."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -87,6 +115,13 @@
     "\n",
     "scaler = MinMaxScaler()\n",
     "X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Klasyfikacja metodami kNN i SVC. Dla kNN liczba analizowanych \"sąsiadów\" wynosiła 3 zaś dla SVC przyjmujemy liniowy charakter hiperpłaszczyzny."
    ]
   },
   {
@@ -110,6 +145,13 @@
     "    KNeighborsClassifier(n_neighbors = 3),\n",
     "    SVC(kernel = 'linear')\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definicja algorytmu selekcji cech SKB (czyli Select k Best), wybór k dzięsęciu najlepszych i wyświetlenie nowych nazw cech:"
    ]
   },
   {
@@ -139,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definicja selektora cech RFE (dla klasyfikatora SVC i redukcji do 10 cech):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -153,31 +202,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN wyniosła:\t\t\t0.8024999999999999\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody SKB wyniosła:\t0.7825\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora kNN i metody RFE wyniosła:\t0.865\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC wyniosła:\t\t\t0.8825\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody SKB wyniosła:\t0.8\n",
-      "Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora SVC i metody RFE wyniosła:\t0.8825\n"
-     ]
-    }
-   ],
    "source": [
-    "for name, classifier in zip(names, classifiers):\n",
-    "    score = cross_val_score(classifier, X, y.values.ravel(), cv = kfold)\n",
-    "    score2 = cross_val_score(classifier, X2, y.values.ravel(), cv = kfold)\n",
-    "    score3 = cross_val_score(classifier, X3, y.values.ravel(), cv = kfold)\n",
-    "    print('Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora {} wyniosła:\\t\\t\\t{}'.format(name, score.mean()))\n",
-    "    print('Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora {} i metody SKB wyniosła:\\t{}'.format(name, score2.mean()))\n",
-    "    print('Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora {} i metody RFE wyniosła:\\t{}'.format(name, score3.mean()))"
+    "Definicja ekstraktora cech PCA (ekstrakcja do 4 cech)."
    ]
   },
   {
@@ -207,6 +235,13 @@
    ],
    "source": [
     "print(pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Porównanie wyników dla wszystkich kombinacji klasyfikatrów oraz metod i ekstrakcji (z tym ze RFE zdefiniowane było dla SVC więc wynik RFE dla kNN wydaję się być mocno dyskusyjny):"
    ]
   },
   {
@@ -240,6 +275,18 @@
     "    print('Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora {} i metody RFE wyniosła:\\t{}'.format(name, score3.mean()))\n",
     "    print('Średnia dokładność klasyfikacji z wykorzystaniem klasyfikatora {} i metody PCA:\\t\\t{}'.format(name, score4.mean()))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Co interesujące to właśnie dyskusyjny eksperyment klasyfikacji KNN z selekcją RFE poprawił wynik dla kNN o 8 punktów procentowych a np. SKB pogorszył go o dwa. W przypadku klasyfikatora SVC w/w metody albo nie zmieniły wyniku (RFE) albo pogorszyły wynik od 8-10 punktów procentowych."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
