--- a/notebooks/01_classification_25.ipynb
+++ b/notebooks/01_classification_25.ipynb
@@ -80,7 +80,7 @@
     "X = scaler.fit_transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1)"
    ]
   },
   {
@@ -120,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "KNN Precision:\t  0.85\n",
-      "KNN Accuracy:\t  0.7875\n"
+      "KNN Accuracy:\t  0.75\n"
      ]
     }
    ],
@@ -147,30 +147,18 @@
      "text": [
       "                               precision    recall  f1-score   support\n",
       "\n",
-      "            Basilar-type aura       1.00      0.29      0.44         7\n",
-      " Familial hemiplegic migraine       0.50      0.80      0.62         5\n",
-      "        Migraine without aura       0.62      0.62      0.62         8\n",
-      "                        Other       1.00      0.67      0.80         3\n",
-      " Sporadic hemiplegic migraine       0.00      0.00      0.00         4\n",
-      "   Typical aura with migraine       0.82      0.94      0.88        49\n",
-      "Typical aura without migraine       1.00      1.00      1.00         4\n",
+      "            Basilar-type aura       1.00      0.12      0.22         8\n",
+      " Familial hemiplegic migraine       0.57      0.80      0.67         5\n",
+      "        Migraine without aura       0.64      0.64      0.64        11\n",
+      "                        Other       1.00      0.50      0.67         4\n",
+      " Sporadic hemiplegic migraine       0.00      0.00      0.00         5\n",
+      "   Typical aura with migraine       0.77      0.94      0.85        62\n",
+      "Typical aura without migraine       1.00      0.60      0.75         5\n",
       "\n",
-      "                     accuracy                           0.79        80\n",
-      "                    macro avg       0.71      0.62      0.62        80\n",
-      "                 weighted avg       0.77      0.79      0.76        80\n",
+      "                     accuracy                           0.75       100\n",
+      "                    macro avg       0.71      0.51      0.54       100\n",
+      "                 weighted avg       0.75      0.75      0.71       100\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -190,7 +178,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Sporadic hemiplegic migraine'}"
+       "set()"
       ]
      },
      "execution_count": 9,
@@ -220,9 +208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "współczynnik zarysu:\t\t 0.10306167814552365\n",
-      "indeks Calińskiego-Harabasza:\t 17.50395819700793\n",
-      "indeks Daviesa-Bouldina:\t 2.08342292869469\n"
+      "współczynnik zarysu:\t\t 0.09710216429160358\n",
+      "indeks Calińskiego-Harabasza:\t 16.920883412095897\n",
+      "indeks Daviesa-Bouldina:\t 2.12940438225348\n"
      ]
     }
    ],
